# e-station

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: iced-architecture-reviewer.md  (+5 more)
data/: Cargo.toml
data/proptest-regressions/panel/: ladder.txt
data/src/: lib.rs  tickers_table.rs  util.rs
data/src/chart/: indicator.rs
data/src/config/: proxy.rs  tachibana.rs
data/src/layout/: pane.rs
data/src/panel/: ladder.rs
data/src/wire/: mod.rs  tachibana.rs
data/tests/: tachibana_keyring_roundtrip.rs
docs/: index.md
engine-client/: Cargo.toml
engine-client/src/: backend.rs  capabilities.rs  connection.rs  convert.rs  depth_tracker.rs  dto.rs  error.rs  hybrid.rs  lib.rs  order_session_state.rs  process.rs  stock_meta.rs  tachibana_meta.rs  venue_caps.rs
engine-client/tests/: apply_after_handshake_clears_venue_ready_state.rs  backend_swap.rs  bundled_path_with_unicode.rs  capabilities_changed_after_reconnect.rs  capabilities_gate.rs  capabilities_no_secret_keys.rs  command_debug_redaction.rs  connection_closed.rs  creds_no_second_password_on_wire.rs  depth_assert.rs  depth_gap.rs  depth_gap_recovery.rs  dev_login_flag_release.rs  dto_conversion.rs  dto_deny_unknown_fields.rs  engine_command.rs  engine_connection_debug_redaction.rs  handshake.rs  hybrid_backend.rs  load_replay_data_strategy_file.rs  order_session_state.rs  order_session_state_wal.rs  positions_roundtrip.rs  process_creds_refresh_hook.rs  process_creds_refresh_listener_singleton.rs  process_lifecycle.rs  process_send_failure_skips_subscribe.rs  process_venue_error_session_restore_failed.rs  process_venue_login_cancelled.rs  process_venue_ready_gate.rs  process_venue_ready_timeout_marks_failed.rs  request_key_canonical.rs  schema_v1_2_roundtrip.rs  schema_v1_3_roundtrip.rs  schema_v1_4_roundtrip.rs  schema_v1_5_roundtrip.rs  schema_v2_1_roundtrip.rs  schema_v2_4_nautilus.rs  start_or_attach.rs  tachibana_kline_capability_gate.rs  (+8 more)
exchange/: Cargo.toml
exchange/src/: adapter.rs  depth.rs  error.rs  lib.rs  serde_util.rs
exchange/src/adapter/: client.rs  hub.rs  proxy.rs  venue_backend.rs
exchange/src/adapter/hub/: binance.rs  hyperliquid.rs
exchange/src/adapter/hub/binance/: fetch.rs
exchange/src/unit/: price.rs
exchange/tests/: adapter_handles_generation.rs  engine_only_wiring.rs  ticker_info_state_migration.rs  venue_backend.rs  venue_replay.rs
python/: engine.spec  pyproject.toml
python/data/: __init__.py  __main__.py  schemas.py  server.py
python/data/exchanges/: base.py  binance.py
python/engine/: __init__.py  __main__.py  mode.py  order_router.py  schemas.py  server.py
python/engine/exchanges/: __init__.py  base.py  binance.py  bybit.py  hyperliquid.py  hyperliquid_orders.py  mexc.py  normalize.py  okex.py  tachibana.py  tachibana_auth.py  tachibana_codec.py  tachibana_event.py  tachibana_file_store.py  tachibana_helpers.py  tachibana_login_dialog.py  tachibana_login_flow.py  tachibana_master.py  tachibana_orders.py  tachibana_url.py  tachibana_ws.py
python/engine/nautilus/: data_loader.py  engine_runner.py  gym_env.py  instrument_cache.py  instrument_factory.py  jquants_loader.py  narrative_hook.py  portfolio_view.py  replay_speed.py  strategy_helpers.py  strategy_loader.py
python/engine/nautilus/clients/: __init__.py  hyperliquid.py  tachibana.py  tachibana_data.py  tachibana_event_bridge.py
python/engine/nautilus/strategies/: buy_and_hold.py
python/flowsurface_data/: __init__.py  __main__.py  limiter.py  schemas.py  server.py
python/flowsurface_data/exchanges/: binance.py
python/tests/: test_audit_log_no_secret.py  test_binance_fetch_trades.py  test_binance_rest.py  test_buying_power_ipc.py  test_bybit_depth_sync.py  test_bybit_integration.py  test_bybit_rest.py  test_cancel_all_exception_propagation.py  test_cancel_all_partial_failure.py  test_collect_fill_data_preserves_pairs.py  test_data_mapping_instrument.py  test_depth_sync.py  test_ec_dedup.py  test_ec_parser.py  test_ec_server_dispatch.py  test_ec_state_machine.py  test_engine_runner_replay.py  test_engine_runner_streaming_fills.py  test_event_url_sanitize.py  test_events_json_schema.py  test_execution_marker_emit.py  test_expire_time_ns_conversion.py  test_flowsurface_env_with_nautilus.py  test_forget_second_password_conflict.py  test_httpx_logger_suppression.py  test_hyperliquid_depth_sync.py  test_hyperliquid_execution_client.py  test_hyperliquid_rest.py  test_instrument_cache.py  test_invariant_reason_code.py  test_invariant_table_covers_all_ids.py  test_invariant_tests_doc.py  test_jquants_loader.py  test_limiter.py  test_mexc_depth_sync.py  test_mexc_rest.py  test_mode_isolation.py  test_narrative_hook.py  test_nautilus_boundary_lint.py  test_nautilus_buy_and_hold.py  (+106 more)
python/tests/fixtures/: _build_jquants_fixtures.py  fill_strategy.py  test_strategy.py
scripts/: build-engine.sh  build-macos.sh  build-windows.sh  capture_ec_frames.py  check_binance_ws.py  debug_binance_recv.py  debug_engine_stream.py  diagnose_buying_power.py  diagnose_tachibana_depth_raw.py  diagnose_tachibana_ws.py  measure_ipc_latency.py  measure_klines_latency.py  nautilus_replay_baseline.py  package-linux.sh  replay_dev_load.sh  run-replay-debug.sh  s70_tachibana_nautilus_demo_order.py  smoke_tachibana_login.py  test_trade_stream.py
src/: chart.rs  cli.rs  layout.rs  logger.rs  main.rs  modal.rs  native_menu.rs  replay_api.rs  style.rs  venue_state.rs  widget.rs
tests/: auto_generate_replay_panes_auto_bind.rs  engine_rehello_yields_before_engine_connected.rs  engine_status_subscription_is_singleton.rs  main_update_no_block_on.rs  main_update_no_static_access.rs  regression_loading_toast_strings.rs  tachibana_login_update.rs  test_replay_order_list_view.rs  venue_names_includes_replay.rs  venue_names_includes_tachibana.rs  venue_ready_bridge_invalidates_on_login_events.rs
tools/: iced_purity_grep.sh  secret_scan.ps1  secret_scan.sh  secret_scan_allowlist.txt  secret_scan_patterns.txt
(+287 files in other folders)
