[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowsurface-data"
version = "0.1.0"
description = "Python data engine for Flowsurface — market data acquisition and distribution"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.0",
    "orjson>=3.9",
    "httpx>=0.27",
    "nautilus-trader>=1.211,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
# Used by `scripts/build-engine.sh` to freeze the engine into a
# standalone `flowsurface-engine` binary (Phase 6 distribution).
build = [
    "pyinstaller>=6.5",
]

[tool.hatch.build.targets.wheel]
packages = ["python/engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["python"]
testpaths = ["python/tests"]
markers = [
    "demo_tachibana: requires real Tachibana demo account credentials (DEV_TACHIBANA_USER_ID / DEV_TACHIBANA_PASSWORD)",
]

[tool.pyright]
extraPaths = ["python"]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
