[package]
name = "flowsurface-engine-client"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
description = "IPC client connecting Flowsurface to the Python data engine"

[dependencies]
exchange.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
secrecy.workspace = true
zeroize.workspace = true

tokio = { version = "1.43", default-features = false, features = ["full"] }
futures = "0.3.32"
rand = "0.9.2"
url = "2.5.8"
bytes = "1.8.0"
async-stream = "0.3"

# WebSocket transport to Python engine (plain ws://, no TLS required for loopback)
fastwebsockets = { version = "0.9.0", default-features = false, features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = { version = "1", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "0.1.10", default-features = false }

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
