[package]
name = "flowsurface-exchange"
description = "Adapters for data providers/crypto exchanges to work with Flowsurface"
version.workspace = true
license = "MIT"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
url.workspace = true

futures = "0.3.32"

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "macros", "rt-multi-thread"] }
mockito = "1.6"
tempfile = "3"
serial_test = "3"