[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowsurface-data"
version = "0.1.0"
description = "Python data engine for Flowsurface — market data acquisition and distribution"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.0",
    "orjson>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["flowsurface_data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
